tests/expectations/compiler/dyn_record/dyn_record_ternary.out
Error [ETYC0372117]: Expected a type supported by ternary but type `dyn record` was found.
    --> compiler-test:3:29
     |
   3 |         let r: dyn record = flag ? a : b;
     |                             ^^^^^^^^^^^^
